@@ -1526,6 +1526,9 @@ GetFieldsSpec(void)
 	char  name[MAXFIELDNAMELEN];
 	char  name2[MAXFIELDNAMELEN];
 	DBFFieldType type = -1;
+#ifdef USE_ICONV
+	char *utf8str;
+#endif
 
 	num_fields = DBFGetFieldCount( hDBFHandle );
 	num_records = DBFGetRecordCount(hDBFHandle);
@@ -1545,6 +1548,17 @@ GetFieldsSpec(void)
 		types[j] = type;
 		widths[j] = field_width;
 		precisions[j] = field_precision;
+
+#ifdef USE_ICONV
+		if ( encoding )
+		{
+			utf8str = utf8(encoding, name);
+			if ( ! utf8str ) exit(1);
+			strcpy(name, utf8str);
+			free(utf8str);
+		}
+#endif
+
 
 		/*
 		 * Make field names lowercase unless asked to
@@ -1582,7 +1596,7 @@ GetFieldsSpec(void)
 			}
 		}	
 
-		field_names[j] = malloc ( strlen(name)+3 );
+		field_names[j] = malloc (strlen(name)+1);
 		strcpy(field_names[j], name);
 
 		sprintf(col_names, "%s\"%s\",", col_names, name);
@@ -1636,6 +1650,9 @@ utf8 (const char *fromcode, char *inputbuf)
 
 /**********************************************************************
  * $Log$
+ * Revision 1.94  2005/07/27 02:47:14  strk
+ * Support for multibyte field names in loader
+ *
  * Revision 1.93  2005/07/27 02:35:50  strk
  * Minor cleanups in loader
  *
